UI: Fixes alignment for popup messages with empty unique count element

--- a/structr-base/src/main/resources/structr/css/main.css
+++ b/structr-base/src/main/resources/structr/css/main.css
@@ -3963,6 +3963,9 @@ ul.combined-input-select-field li:hover {
 .grid {
 	display: grid;
 }
+.empty\:hidden:empty {
+	display: none;
+}
 .relative {
 	position: relative;
 }
